# Midori-AI-GPT-DiscordBot

./: Dockerfile  compose.yaml  config.json  entrypoint.sh  main.py  pyproject.toml  setup.sh  start_bot.bat
