[project]
name = "discordllmbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.20",
    "interactions-py",
    "langchain>=0.3.9",
    "openai>=1.55.3",
    "pyautogen>=0.4",
    "tika>=2.6.0",
]

[tool.uv.sources]
interactions-py = { git = "https://github.com/interactions-py/interactions.py.git", rev = "stable" }
